navbar+button+footer+couleurs scss

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+$blue-a: #2B2E4A;
+$red-vif: #e84545;
+$red-foncé:#903749;
+$red-violet:#53354a;
