--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+
+body {
+  background-color: $blue-a;
+}
+
+
+.presentation {
+  color: white;
+ font-family: Train One, sans-serif;
+}
+
+
+
+.pres-text {
+  color: white;
+  font-family: open sans;
+}
