--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+    <% end %>
+</div>
+
+
+
+<div class="presentation">
+     <h1>Atelier de conception-réalisation de sites internet</h1>
+      <div class="pres-text">
+          <p>A l'Atelier 409 vos idées prennent vies. Laissez-nous vous guider dans la réalisation de votre site internet</p>
+          <%= link_to "Devis gratuit", "#", class: "btn btn-flat" %>
+      </div>
+</div>
+
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Site propulsé par le collectif  de l'Atelier 409
+  </div>
+</div>
