--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,15 +4,14 @@
     <% end %>
 </div>
 
-
-
-<div class="presentation">
-     <h1>Atelier de conception-réalisation de sites internet</h1>
-      <div class="pres-text">
-          <p>A l'Atelier 409 vos idées prennent vies. Laissez-nous vous guider dans la réalisation de votre site internet</p>
-          <%= link_to "Devis gratuit", "#", class: "btn btn-flat" %>
-      </div>
+<div class="banner">
+  <div class="container">
+    <h1><strong>Atelier de conception-réalisation de sites internet</strong> </h1>
+    <p>A l'Atelier 409 vos idées prennent vies. Laissez-nous vous guider dans la réalisation de votre site internet</p>
+    <a class="btn btn-flat" href="#">Devis Gratuit</a>
+  </div>
 </div>
+
 
 
 <div class="footer">
@@ -22,6 +21,6 @@
     <a href="#"><i class="fab fa-facebook"></i></a>
   </div>
   <div class="footer-copyright">
-    Site propulsé par le collectif  de l'Atelier 409
+    Site propulsé par le collectif  de <strong>l'Atelier 409</strong>
   </div>
 </div>
