--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Atelier409Site</title>
+<meta name="title" content="Ateleir 409 - Le collectif qui crée à votre image votre site internet">
+<meta name="imzge" content="logo atelier 409">
+<meta name="description" content="Atelier de conception-réalisation de sites internet. Devis 100% gratuit. Laissez-nous vous guider par notre collectif pour la réalisation de votre site internet ">
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
