card and section structured + fonts fixed

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,5 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "button";
+@import "card_grid";
 @import "footer";
 @import "navbar";
+@import "title";
