--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,37 @@
 
 <div class="banner">
   <div class="container">
-    <h1><strong>Atelier de conception-réalisation de sites internet</strong> </h1>
-    <p>A l'Atelier 409 vos idées prennent vies. Laissez-nous vous guider dans la réalisation de votre site internet</p>
-    <a class="btn btn-flat" href="#">Devis Gratuit</a>
+    <h1>Atelier de conception-réalisation de sites internet</h1>
+    <p>A l'Atelier 409, vos idées prennent vie. Laissez-nous vous guider dans la réalisation de votre site internet</p>
+    <a class="btn btn-flat" href="#">DEVIS GRATUIT</a>
   </div>
 </div>
 
+<h2 class="section-title">Nos services</h2>
 
+<div class="card-grid">
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+</div>
 
-<div class="footer">
+<h2 class="section-title">Nos réalisations</h2>
+
+<div class="card-grid">
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+</div>
+
+<h2 class="section-title">Notre équipe</h2>
+
+<div class="card-grid">
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+  <div class="card">DIV</div>
+</div>
+
+<%# <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -23,4 +45,4 @@
   <div class="footer-copyright">
     Site propulsé par le collectif  de <strong>l'Atelier 409</strong>
   </div>
-</div>
+</div> %>
