--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
   <div class="card">DIV</div>
 </div>
 
-<%# <div class="footer">
+<div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -45,4 +45,4 @@
   <div class="footer-copyright">
     Site propulsé par le collectif  de <strong>l'Atelier 409</strong>
   </div>
-</div> %>
+</div>
