--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,10 +7,10 @@
   height: 100px;
   padding: 0px 50px;
   color: $red-vif;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  //position: absolute;
+  //bottom: 0;
+  //left: 0;
+  //right: 0;
 }
 .footer-links {
   display: flex;
