--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,6 +36,22 @@
   <div class="card">DIV</div>
 </div>
 
+
+<div class="contact subbanner light-text" id="contact">
+  <div class="container">
+    <h2 class="section-title">Contact</h2>
+    <div class="contact-section row">
+        <div class="contact-details col-sm-12 col-md-3">
+            <p>contact@atelier409.com</p>
+            <p>+33 6 42 43 19 75</p>
+            <p>Marseille region, France</p>
+        </div>
+        <div class="col-sm-12 col-md-9">
+            <%= render 'contacts/new' %>
+        </div>
+    </div>
+</div>
+</div>
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
