--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,7 @@
 @import "button";
 @import "card_grid";
 @import "footer";
+@import "modal";
 @import "navbar";
+@import "project_cards";
 @import "title";
