--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
 <h2 class="section-title">Nos réalisations</h2>
 
 <div class="card-grid">
-  <div class="card">DIV</div>
+  <%= render 'projects/samba' %>
   <div class="card">DIV</div>
   <div class="card">DIV</div>
 </div>
