contact section layout + logo + global padding

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "button";
 @import "card_grid";
+@import "contact";
 @import "footer";
 @import "navbar";
 @import "title";
