--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -17,7 +17,7 @@
       <%= f.text_area :message, as: :text %>
     </div>
     <div class="text-right">
-      <%= f.submit 'Envoyer', class: "btn-flat" %>
+      <%= f.submit 'ENVOYER', class: "btn-flat" %>
     </div>
   <% end %>
 </div>
