--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,3 +10,13 @@
   background: $red-vif;
   color: white;
 }
+
+button,
+input[type="submit"],
+input[type="reset"] {
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
