--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,10 @@
     <a class="btn btn-flat" href="#">DEVIS GRATUIT</a>
 </div>
 
+<div class="blob">
+  <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623684373/Atelier%20409/409-blob-cropped_uw9svo.png" alt="blob" id="img-blob">
+</div>
+
 <h2 class="section-title">Nos services</h2>
 
 <div class="card-grid">
