--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,9 +33,30 @@
 <h2 class="section-title">Notre équipe</h2>
 
 <div class="card-grid">
-  <div class="card">DIV</div>
-  <div class="card">DIV</div>
-  <div class="card">DIV</div>
+  <div class="card">
+    <img src="../assets/images/tanguy.png" class="card-img-top" alt="tanguy-leveque-dev">
+    <div class="card-body">
+      <h5 class="card-title">Tanguy</h5>
+      <p class="card-text">Présentation tanguy</p>
+      <a href="#" class="btn btn-primary">Linkedin</a>
+    </div>
+  </div>
+    <div class="card">
+    <img src="../assets/images/beryl.png" class="card-img-top" alt="beryl-armand-dev">
+    <div class="card-body">
+      <h5 class="card-title">Beryl</h5>
+      <p class="card-text">Présentation beryl</p>
+      <a href="#" class="btn btn-primary">Linkedin</a>
+      </div>
+  </div>
+    <div class="card">
+    <img src="../assets/images/jeremy.png" class="card-img-top" alt="jeremy-lannes-dev">
+    <div class="card-body">
+      <h5 class="card-title">Jeremy</h5>
+      <p class="card-text">Présentation jeremy</p>
+      <a href="#" class="btn btn-primary">Linkedin</a>
+      </div>
+  </div>
 </div>
 
 <div class="contact">
