--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
   <div class="card">DIV</div>
 </div>
 
-<h2 class="section-title">Notre équipe</h2>
+<h2 class="section-title">Notre équipe baldnbzealf</h2>
 
 <div class="card-grid">
   <div class="card">
