--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,8 +26,8 @@
 
 <div class="card-grid">
   <%= render 'projects/samba' %>
-  <div class="card">DIV</div>
-  <div class="card">DIV</div>
+  <%= render 'projects/cabbage_leaf' %>
+  <%= render 'projects/fil_mecanique' %>
 </div>
 
 <h2 class="section-title">Notre équipe</h2>
