--- a/app/views/projects/_samba.html.erb
+++ b/app/views/projects/_samba.html.erb
@@ -13,8 +13,7 @@
                 <span aria-hidden="true">&times;</span>
             </button>
             <div class="modal-links">
-                <a href="https://github.com/beryl-koller/SAMBA" target="blank" class="btn-flat btn-flat-small">View on Github</a>
-                <a href="https://www.youtube.com/watch?v=pKlZ6dxEzh4" target="blank" class="btn-flat btn-flat-small">View on YouTube</a>
+                <a href="https://www.youtube.com/watch?v=pKlZ6dxEzh4" target="blank" class="btn-flat btn-flat-small">Voir sur YouTube</a>
             </div>
             <div class="modal-desc">
                 <p class="modal-text">Samba est une application web mobile visant à aider les utilisateurs dans l'organisation de leur voyage en van. L'utilisateur commence par soumettre ses préférences, et obtient une suggestion pour une location de van, ainsi que des endroits où dormir et des activités à faire autour de son itinéraire. L'utilisateur est guidé pas à pas, et peut au final visualiser l'ensemble du voyage tel qu'il l'a planifié.</p>
