--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to "#", class: "navbar-brand navbar-offset" do %>
     <%= image_tag "https://res.cloudinary.com/df0stqosw/image/upload/v1623479024/Atelier%20409/logos/409-red_fecixt.png" %>
-    <% end %>
+  <% end %>
 </div>
 
 <div class="banner">
