--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,31 +30,37 @@
   <div class="card">DIV</div>
 </div>
 
-<h2 class="section-title">Notre équipe baldnbzealf</h2>
+<h2 class="section-title">Notre équipe</h2>
 
 <div class="card-grid">
-  <div class="card">
-    <img src="../assets/images/tanguy.png" class="card-img-top" alt="tanguy-leveque-dev">
-    <div class="card-body">
-      <h5 class="card-title">Tanguy</h5>
-      <p class="card-text">Présentation tanguy</p>
-      <a href="#" class="btn btn-primary">Linkedin</a>
+  <div class="team">
+    <div class="image-team">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/ar_1:1,b_rgb:262c35,bo_0px_solid_rgb:000000,c_fill,g_auto,r_max,w_1000/v1623765984/atelier409/tanguy_xikzdx.png" class="card-img-top" alt="tanguy-leveque-dev">
     </div>
-  </div>
-    <div class="card">
-    <img src="../assets/images/beryl.png" class="card-img-top" alt="beryl-armand-dev">
-    <div class="card-body">
-      <h5 class="card-title">Beryl</h5>
-      <p class="card-text">Présentation beryl</p>
-      <a href="#" class="btn btn-primary">Linkedin</a>
+      <div class="card-team-body">
+        <h5 class="card-title">Tanguy</h5>
+        <p class="card-text">Il n'est pas qu'un développeur passionné et rigoureux ! C'est aussi le plus sportif de la bande. N'essayez pas de voler nos idées, il vous rattraperait en quelques millisecondes.</p>
+        <a href="https://www.linkedin.com/in/tanguy-leveque-708183108/" class="btn btn-primary">Linkedin</a>
       </div>
   </div>
-    <div class="card">
-    <img src="../assets/images/jeremy.png" class="card-img-top" alt="jeremy-lannes-dev">
-    <div class="card-body">
-      <h5 class="card-title">Jeremy</h5>
-      <p class="card-text">Présentation jeremy</p>
-      <a href="#" class="btn btn-primary">Linkedin</a>
+    <div class="team">
+    <div class="image-team">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623770421/atelier409/beryl_cmjygb.jpg" class="card-img-top" alt="beryl-armand-dev">
+    </div>
+      <div class="card-team-body">
+        <h5 class="card-title">Beryl</h5>
+        <p class="card-text">Vous souhaitez des renseignements techniques ? Dans ce cas, c'est à Beryl qu'il faut vous adresser. On lui a octroyé à la majorité absolue le titre de cerveau de l'équipe (normal, c'est la seule fille direz-vous...).</p>
+        <a href="https://www.linkedin.com/in/berylarmand/" class="btn btn-primary">Linkedin</a>
+      </div>
+  </div>
+    <div class="team">
+      <div class="image-team">
+    <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623770998/atelier409/jeremy_qb7a2e.jpg" class="card-img-top" alt="jeremy-lannes-dev">
+    </div>
+      <div class="card-team-body">
+        <h5 class="card-title">Jeremy</h5>
+        <p class="card-text">Présentation jeremy</p>
+        <a href="https://www.linkedin.com/in/jeremy-lannes-1b0086106/" class="btn btn-primary">Linkedin</a>
       </div>
   </div>
 </div>
