--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,9 +4,11 @@
 @import "blob";
 @import "button";
 @import "card_grid";
+@import "card_team";
 @import "contact";
 @import "footer";
 @import "modal";
 @import "navbar";
 @import "project_cards";
 @import "title";
+
