--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,9 +17,9 @@
 <h2 class="section-title">Nos services</h2>
 
 <div class="card-grid">
-  <div class="card">DIV</div>
-  <div class="card">DIV</div>
-  <div class="card">DIV</div>
+  <div class="card"><%= image_tag "" %></div>
+  <div class="card"><%= image_tag "" %></div>
+  <div class="card"><%= image_tag "" %></div>
 </div>
 
 <h2 class="section-title">Nos réalisations</h2>
