--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,9 +17,41 @@
 <h2 class="section-title">Nos services</h2>
 
 <div class="card-grid">
-  <div class="card"><%= image_tag "" %></div>
-  <div class="card"><%= image_tag "" %></div>
-  <div class="card"><%= image_tag "" %></div>
+  <div class="services">
+  <div class="site">
+    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749073/atelier409/noun_responsive_3486316_iixpdt.png" class="card-img-top" alt="site">
+  </div>
+  <div class="card-title-services">Site vitrine</div>
+  <div class="card-text-services">Creation sur-mesure de votre site</div>
+  <div class="card-text-services">Un site responsive</div>
+  <div class="card-text-services">Un design unique a votre identité</div>
+  <div class="card-text-services">Hébergement</div>
+  <div class="card-text-services">Référencement</div>
+</div>
+  <div class="services">
+  <div class="e-commerce">
+    <img src="" class="card-img-top" alt="site">
+  </div>
+<div class="card-title-services">Site E-commerce</div>
+ <div class="card-text-services">Creation sur-mesure de votre site e-commerce</div>
+  <div class="card-text-services">Solution PrestaShop</div>
+  <div class="card-text-services">Paiement en ligne</div>
+  <div class="card-text-services">Gestion admin</div>
+  <div class="card-text-services">Référencement</div>
+
+  </div>
+
+  <div class="services">
+  <div class="dev-web">
+    <img src="" class="card-img-top" alt="site">
+  </div>
+  <div class="card-title-services"> Developpement Web</div>
+     <div class="card-text-services">Une idée specifique ?</div>
+  <div class="card-text-services">création de votre solution !</div>
+  <div class="card-text-services">API</div>
+  <div class="card-text-services">Intranet</div>
+  </div>
+
 </div>
 
 <h2 class="section-title">Nos réalisations</h2>
