card service calé

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,8 +18,8 @@
 
 <div class="card-grid">
   <div class="services">
-  <div class="site">
-    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749073/atelier409/noun_responsive_3486316_iixpdt.png" class="card-img-top" alt="site">
+  <div class="image-services">
+    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749073/atelier409/noun_responsive_3486316_iixpdt.png" class="card-img-services" alt="site">
   </div>
   <div class="card-title-services">Site vitrine</div>
   <div class="card-text-services">Creation sur-mesure de votre site</div>
@@ -28,9 +28,10 @@
   <div class="card-text-services">Hébergement</div>
   <div class="card-text-services">Référencement</div>
 </div>
+
   <div class="services">
-  <div class="e-commerce">
-    <img src="" class="card-img-top" alt="site">
+  <div class="image-services">
+    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623747760/atelier409/noun_E-Commerce_3349557_bfcxeu.png" class="card-img-services" alt="site">
   </div>
 <div class="card-title-services">Site E-commerce</div>
  <div class="card-text-services">Creation sur-mesure de votre site e-commerce</div>
@@ -38,16 +39,15 @@
   <div class="card-text-services">Paiement en ligne</div>
   <div class="card-text-services">Gestion admin</div>
   <div class="card-text-services">Référencement</div>
-
   </div>
 
   <div class="services">
-  <div class="dev-web">
-    <img src="" class="card-img-top" alt="site">
+  <div class="image-services">
+    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749070/atelier409/noun_developing_marketing_3719377_xtoodj.png" class="card-img-services" alt="site">
   </div>
   <div class="card-title-services"> Developpement Web</div>
      <div class="card-text-services">Une idée specifique ?</div>
-  <div class="card-text-services">création de votre solution !</div>
+  <div class="card-text-services">Nous créons votre solution !</div>
   <div class="card-text-services">API</div>
   <div class="card-text-services">Intranet</div>
   </div>
