orga+presJeremy+servcies

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "blob";
 @import "button";
 @import "card_grid";
+@import "card_organisation";
 @import "card_services";
 @import "card_team";
 @import "contact";
