--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="banner">
     <h1>Atelier de conception-réalisation de sites internet</h1>
     <p>A l'Atelier 409, vos idées prennent vie. Laissez-nous vous guider dans la réalisation de votre site internet</p>
-    <a class="btn btn-flat" href="#">DEVIS GRATUIT</a>
+    <a class="btn btn-flat" href="">DEVIS GRATUIT</a>
 </div>
 
 <div class="blob">
@@ -54,6 +54,54 @@
 
 </div>
 
+<h2 class="section-title">Une offre 100% sur mesure</h2>
+
+<div class="card-grid">
+  <div class="origanisation">
+    <div class="card-title-orga">Etude de vos besoins</div>
+    <div class="image-organisation">
+      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+    </div>
+    <div class="card-text-orga">Définissons un cahier des charges</div>
+  </div>
+
+<div class="origanisation">
+    <div class="card-title-orga">Plannification / Maquette</div>
+    <div class="image-organisation">
+      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+    </div>
+    <div class="card-text-orga">Plannification du projet</div>
+    <div class="card-text-orga">Réalisation des maquettes</div>
+  </div>
+
+  <div class="origanisation">
+    <div class="card-title-orga">Conception / Developpement</div>
+    <div class="image-organisation">
+      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+    </div>
+    <div class="card-text-orga">Nous créons et developpons votre site</div>
+  </div>
+
+<div class="origanisation">
+    <div class="card-title-orga">Livraison</div>
+    <div class="image-organisation">
+      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+    </div>
+    <div class="card-text-orga">Mise en production et livraison </div>
+  </div>
+
+  <div class="origanisation">
+    <div class="card-title-orga">Accompagnement / Suivi</div>
+    <div class="image-organisation">
+      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+    </div>
+    <div class="card-text-orga">Mises a jour</div>
+    <div class="card-text-orga">entretien</div>
+  </div>
+</div>
+
+
+
 <h2 class="section-title">Nos réalisations</h2>
 
 <div class="card-grid">
@@ -91,7 +139,7 @@
     </div>
       <div class="card-team-body">
         <h5 class="card-title">Jeremy</h5>
-        <p class="card-text">Présentation jeremy</p>
+        <p class="card-text">Le plus calme de la bande ...Pas sur ! Le plus créatif c'est lui , il n'a pas son égal pour créer les maquettes tellement belles qu'on transpire rien qu'a savoir qu'il va falloir coder avec des animations de ouf !</p>
         <a href="https://www.linkedin.com/in/jeremy-lannes-1b0086106/" class="btn btn-primary">Linkedin</a>
       </div>
   </div>
