--- a/app/assets/stylesheets/components/_card_services.scss
+++ b/app/assets/stylesheets/components/_card_services.scss
@@ -1,8 +1,15 @@
 
+// #chronologie {
+//   border-top: 2px solid white;
+//   width : 85%;
+//   position: absolute;
+// }
+
 .card-title-services {
   text-align: center;
   color: $red-vif;
   font-family: 'Train One', cursive;
+
 }
 
 .card-text-services {
@@ -14,6 +21,7 @@
   width: 30%;
   border-radius: 20%;
   margin-bottom: 20px;
+  color: white;
 }
 
 .image-services {
@@ -24,3 +32,46 @@
   margin: 0px 10px 0px 10px;
 }
 
+.card-img-orga {
+width:20%;
+height: 100px;
+}
+
+.card-grid-services {
+  display: grid;
+  grid-gap: 16px;
+  margin-bottom: 75px;
+}
+
+.card-title-orga{
+font-size: 1rem;
+margin-bottom: 10px;
+}
+/*Media Queries*/
+
+/*Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+  .card-grid-services {
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      padding: 16px;
+      .card-title-orga {
+        width: 20%;
+    }
+  }
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+  .card-grid-services {
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      padding: 16px 64px;
+  }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 1200px) {
+  .card-grid-services {
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      padding: 16px 128px;
+  }
+}
