--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div class="card-title-services">Site vitrine</div>
   <div class="card-text-services">Creation sur-mesure de votre site</div>
-  <div class="card-text-services">Un site responsive</div>
+  <div class="card-text-services">Un site responsive (adapté à tout type d'écran)</div>
   <div class="card-text-services">Un design unique a votre identité</div>
   <div class="card-text-services">Hébergement</div>
   <div class="card-text-services">Référencement</div>
@@ -46,7 +46,7 @@
     <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749070/atelier409/noun_developing_marketing_3719377_xtoodj.png" class="card-img-services" alt="site">
   </div>
   <div class="card-title-services"> Developpement Web</div>
-     <div class="card-text-services">Une idée specifique ?</div>
+  <div class="card-text-services">Une idée specifique ?</div>
   <div class="card-text-services">Nous créons votre solution !</div>
   <div class="card-text-services">API</div>
   <div class="card-text-services">Intranet</div>
@@ -56,44 +56,45 @@
 
 <h2 class="section-title">Une offre 100% sur mesure</h2>
 
-<div class="card-grid">
-  <div class="origanisation">
+<div class="card-grid-services">
+  <div class="organisation">
     <div class="card-title-orga">Etude de vos besoins</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623847679/atelier409/etude.svg.svg" class="card-img-orga"alt="orga">
+    <%# <div id="chronologie"><hr></div> %>
     </div>
     <div class="card-text-orga">Définissons un cahier des charges</div>
   </div>
 
-<div class="origanisation">
+<div class="organisation">
     <div class="card-title-orga">Plannification / Maquette</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849460/atelier409/maquette.svg" class="card-img-orga"alt="orga">
     </div>
     <div class="card-text-orga">Plannification du projet</div>
     <div class="card-text-orga">Réalisation des maquettes</div>
   </div>
 
-  <div class="origanisation">
+  <div class="organisation">
     <div class="card-title-orga">Conception / Developpement</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849606/atelier409/development.svg" class="card-img-orga"alt="orga">
     </div>
     <div class="card-text-orga">Nous créons et developpons votre site</div>
   </div>
 
-<div class="origanisation">
+<div class="organisation">
     <div class="card-title-orga">Livraison</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849789/atelier409/deliver.svg" class="card-img-orga" alt="orga">
     </div>
     <div class="card-text-orga">Mise en production et livraison </div>
   </div>
 
-  <div class="origanisation">
+  <div class="organisation">
     <div class="card-title-orga">Accompagnement / Suivi</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623834573/atelier409/noun_Idea_638772_aylo88.png" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849917/atelier409/follow.svg" class="card-img-orga"alt="orga">
     </div>
     <div class="card-text-orga">Mises a jour</div>
     <div class="card-text-orga">entretien</div>
