icones services en blanc

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,22 +19,22 @@
 <div class="card-grid">
   <div class="services">
   <div class="image-services">
-    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749073/atelier409/noun_responsive_3486316_iixpdt.png" class="card-img-services" alt="site">
+    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/vitrine_swswvo.png" class="card-img-services" alt="site-vitrine">
   </div>
   <div class="card-title-services">Site vitrine</div>
-  <div class="card-text-services">Creation sur-mesure de votre site</div>
+  <div class="card-text-services">Création sur-mesure de votre site</div>
   <div class="card-text-services">Un site responsive (adapté à tout type d'écran)</div>
-  <div class="card-text-services">Un design unique a votre identité</div>
+  <div class="card-text-services">Un design unique à votre identité</div>
   <div class="card-text-services">Hébergement</div>
   <div class="card-text-services">Référencement</div>
 </div>
 
   <div class="services">
   <div class="image-services">
-    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623747760/atelier409/noun_E-Commerce_3349557_bfcxeu.png" class="card-img-services" alt="site">
+    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/ecommerce_reulqh.png" class="card-img-services" alt="site-ecommerce">
   </div>
 <div class="card-title-services">Site E-commerce</div>
- <div class="card-text-services">Creation sur-mesure de votre site e-commerce</div>
+ <div class="card-text-services">Création sur-mesure de votre site e-commerce</div>
   <div class="card-text-services">Solution PrestaShop</div>
   <div class="card-text-services">Paiement en ligne</div>
   <div class="card-text-services">Gestion admin</div>
@@ -43,10 +43,10 @@
 
   <div class="services">
   <div class="image-services">
-    <img src="https://res.cloudinary.com/dv6bffyjj/image/upload/v1623749070/atelier409/noun_developing_marketing_3719377_xtoodj.png" class="card-img-services" alt="site">
+    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/developpement_zudeiy.png" class="card-img-services" alt="site-sur-mesure">
   </div>
-  <div class="card-title-services"> Developpement Web</div>
-  <div class="card-text-services">Une idée specifique ?</div>
+  <div class="card-title-services">Développement Web</div>
+  <div class="card-text-services">Une idée spécifique ?</div>
   <div class="card-text-services">Nous créons votre solution !</div>
   <div class="card-text-services">API</div>
   <div class="card-text-services">Intranet</div>
@@ -54,7 +54,7 @@
 
 </div>
 
-<h2 class="section-title">Une offre 100% sur mesure</h2>
+<h2 class="section-title">Une offre 100% sur-mesure</h2>
 
 <div class="card-grid-services">
   <div class="organisation">
@@ -67,20 +67,20 @@
   </div>
 
 <div class="organisation">
-    <div class="card-title-orga">Plannification / Maquette</div>
+    <div class="card-title-orga">Planification / Maquette</div>
     <div class="image-organisation">
       <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849460/atelier409/maquette.svg" class="card-img-orga"alt="orga">
     </div>
-    <div class="card-text-orga">Plannification du projet</div>
+    <div class="card-text-orga">Planification du projet</div>
     <div class="card-text-orga">Réalisation des maquettes</div>
   </div>
 
   <div class="organisation">
-    <div class="card-title-orga">Conception / Developpement</div>
+    <div class="card-title-orga">Conception / Développement</div>
     <div class="image-organisation">
       <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849606/atelier409/development.svg" class="card-img-orga"alt="orga">
     </div>
-    <div class="card-text-orga">Nous créons et developpons votre site</div>
+    <div class="card-text-orga">Nous créons et développons votre site</div>
   </div>
 
 <div class="organisation">
@@ -88,7 +88,7 @@
     <div class="image-organisation">
       <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849789/atelier409/deliver.svg" class="card-img-orga" alt="orga">
     </div>
-    <div class="card-text-orga">Mise en production et livraison </div>
+    <div class="card-text-orga">Mise en production et livraison</div>
   </div>
 
   <div class="organisation">
@@ -96,8 +96,8 @@
     <div class="image-organisation">
       <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849917/atelier409/follow.svg" class="card-img-orga"alt="orga">
     </div>
-    <div class="card-text-orga">Mises a jour</div>
-    <div class="card-text-orga">entretien</div>
+    <div class="card-text-orga">Mises à jour</div>
+    <div class="card-text-orga">Entretien</div>
   </div>
 </div>
 
