icones organisation en png blanc

--- a/app/assets/stylesheets/components/_card_organisation.scss
+++ b/app/assets/stylesheets/components/_card_organisation.scss
@@ -24,4 +24,10 @@
   margin: 0px 10px 0px 10px;
 }
 
+// #chronologie {
+//   border-top: 2px solid white;
+//   width : 85%;
+//   position: absolute;
+// }
+
 
