--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,15 +18,15 @@
 
 <div class="card-grid">
   <div class="services">
-  <div class="image-services">
-    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/vitrine_swswvo.png" class="card-img-services" alt="site-vitrine">
-  </div>
-  <div class="card-title-services">Site vitrine</div>
-  <div class="card-text-services">Création sur-mesure de votre site</div>
-  <div class="card-text-services">Un site responsive (adapté à tout type d'écran)</div>
-  <div class="card-text-services">Un design unique à votre identité</div>
-  <div class="card-text-services">Hébergement</div>
-  <div class="card-text-services">Référencement</div>
+    <div class="image-services">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/vitrine_swswvo.png" class="card-img-services" alt="site-vitrine">
+    </div>
+  <h3 class="card-title-services">Site vitrine</h3>
+  <p class="card-text-services">Création sur-mesure de votre site</p>
+  <p class="card-text-services">Un site responsive (adapté à tout type d'écran)</p>
+  <p class="card-text-services">Un design unique à votre identité</p>
+  <p class="card-text-services">Hébergement</p>
+  <p class="card-text-services">Référencement</p>
 </div>
 
   <div class="services">
@@ -60,7 +60,7 @@
   <div class="organisation">
     <div class="card-title-orga">Etude de vos besoins</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623847679/atelier409/etude.svg.svg" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/etude_ezktoo.png" class="card-img-orga" alt="etude">
     <%# <div id="chronologie"><hr></div> %>
     </div>
     <div class="card-text-orga">Définissons un cahier des charges</div>
@@ -69,7 +69,7 @@
 <div class="organisation">
     <div class="card-title-orga">Planification / Maquette</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849460/atelier409/maquette.svg" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/maquette_zemyqb.png" class="card-img-orga" alt="planification">
     </div>
     <div class="card-text-orga">Planification du projet</div>
     <div class="card-text-orga">Réalisation des maquettes</div>
@@ -78,7 +78,7 @@
   <div class="organisation">
     <div class="card-title-orga">Conception / Développement</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849606/atelier409/development.svg" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/conception_hsch1v.png" class="card-img-orga" alt="conception">
     </div>
     <div class="card-text-orga">Nous créons et développons votre site</div>
   </div>
@@ -86,7 +86,7 @@
 <div class="organisation">
     <div class="card-title-orga">Livraison</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849789/atelier409/deliver.svg" class="card-img-orga" alt="orga">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/livraison_m1kp7b.png" class="card-img-orga" alt="livraison">
     </div>
     <div class="card-text-orga">Mise en production et livraison</div>
   </div>
@@ -94,7 +94,7 @@
   <div class="organisation">
     <div class="card-title-orga">Accompagnement / Suivi</div>
     <div class="image-organisation">
-      <img src="https://res.cloudinary.com/gmmb0/image/upload/v1623849917/atelier409/follow.svg" class="card-img-orga"alt="orga">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/suivi_dinfrt.png" class="card-img-orga" alt="accompagnement">
     </div>
     <div class="card-text-orga">Mises à jour</div>
     <div class="card-text-orga">Entretien</div>
