--- a/app/assets/stylesheets/components/_card_organisation.scss
+++ b/app/assets/stylesheets/components/_card_organisation.scss
@@ -30,4 +30,40 @@
 //   position: absolute;
 // }
 
+.card-title-orga {
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+/*Media Queries*/
+
+/*Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+  .card-grid-services {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 16px;
+
+    .card-title-orga {
+      width: 20%;
+    }
+  }
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+  .card-grid-services {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 16px 64px;
+  }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 1200px) {
+  .card-grid-services {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 16px 128px;
+  }
+}
+
+
 
