--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,39 +17,40 @@
 <h2 class="section-title">Nos services</h2>
 
 <div class="card-grid">
+
   <div class="services">
     <div class="image-services">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/vitrine_swswvo.png" class="card-img-services" alt="site-vitrine">
     </div>
-  <h3 class="card-title-services">Site vitrine</h3>
-  <p class="card-text-services">Création sur-mesure de votre site</p>
-  <p class="card-text-services">Un site responsive (adapté à tout type d'écran)</p>
-  <p class="card-text-services">Un design unique à votre identité</p>
-  <p class="card-text-services">Hébergement</p>
-  <p class="card-text-services">Référencement</p>
-</div>
-
-  <div class="services">
-  <div class="image-services">
-    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/ecommerce_reulqh.png" class="card-img-services" alt="site-ecommerce">
-  </div>
-<div class="card-title-services">Site E-commerce</div>
- <div class="card-text-services">Création sur-mesure de votre site e-commerce</div>
-  <div class="card-text-services">Solution PrestaShop</div>
-  <div class="card-text-services">Paiement en ligne</div>
-  <div class="card-text-services">Gestion admin</div>
-  <div class="card-text-services">Référencement</div>
+    <h3 class="card-title-services">Site vitrine</h3>
+    <p class="card-text-services">Création sur-mesure de votre site</p>
+    <p class="card-text-services">Un site responsive (adapté à tout type d'écran)</p>
+    <p class="card-text-services">Un design unique à votre identité</p>
+    <p class="card-text-services">Hébergement</p>
+    <p class="card-text-services">Référencement</p>
   </div>
 
   <div class="services">
-  <div class="image-services">
-    <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/developpement_zudeiy.png" class="card-img-services" alt="site-sur-mesure">
+    <div class="image-services">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/ecommerce_reulqh.png" class="card-img-services" alt="site-ecommerce">
+    </div>
+    <h3 class="card-title-services">Site E-commerce</h3>
+    <p class="card-text-services">Création sur-mesure de votre site e-commerce</p>
+    <p class="card-text-services">Solution PrestaShop</p>
+    <p class="card-text-services">Paiement en ligne</p>
+    <p class="card-text-services">Gestion admin</p>
+    <p class="card-text-services">Référencement</p>
   </div>
-  <div class="card-title-services">Développement Web</div>
-  <div class="card-text-services">Une idée spécifique ?</div>
-  <div class="card-text-services">Nous créons votre solution !</div>
-  <div class="card-text-services">API</div>
-  <div class="card-text-services">Intranet</div>
+
+  <div class="services">
+    <div class="image-services">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623918534/Atelier%20409/icons/developpement_zudeiy.png" class="card-img-services" alt="site-sur-mesure">
+    </div>
+    <h3 class="card-title-services">Développement Web</h3>
+    <p class="card-text-services">Une idée spécifique ?</p>
+    <p class="card-text-services">Nous créons votre solution !</p>
+    <p class="card-text-services">API</p>
+    <p class="card-text-services">Intranet</p>
   </div>
 
 </div>
